Better viewing on mobile, fixed broken links

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@
 
 	text-align: center;
 	color: white;
-	margin-right: 5%;
+	margin-right: 0;
 }
 .box{
 	border-style:solid;
@@ -30,24 +30,6 @@
 	color: white;
 }
 
-.jumbotron{
-	padding-right: 0px;
-	padding-left: 0px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-	margin: 0px;
-	color:inherit;
-	background-color: transparent !important;
-}
-
-.currentWork{
-    
-    text-align: center;
-	margin-left:10%;
-	margin-right:10%;
-	margin-bottom:0px;
-	color: white;
-}
 
 /* SKILLS SECTION */
 
@@ -73,29 +55,17 @@ section ul li{
 	color: white;
 }
 
-.statement{
-	text-align: center;
-	color:black;
-}
-
-.footer{
-	position: absolute;
-	bottom: 0;
-	left: 42%;
-	text-align: center;
-}
-
 /* FLIPPING CARDS */
 
 .card-container{
 	text-align: center;
-	perspective: 2000px;
-	background-color: #2B547E;
+	perspective: 900px;
+	background-color: #FF944D;
 	position: absolute;
 	top: 0px;
 	left: 0px;
 	width: 92vw;
-	height: 75vh;
+	height: 75.1vh;
 	margin-left: 4%;
 	margin-top: 4%;
 }
@@ -103,17 +73,25 @@ section ul li{
 .card{
 	color:white;
 	border: 2px solid black;
+	border-bottom: 2px solid black;
 	position:relative;
 	text-align: center;
+	height: inherit;
 	background-color: inherit;
-	width:100%;
-	height:100%;
-	overflow: hidden;
+	width:inherit;
+	height:inherit;
+	overflow-x: hidden;
+	overflow-y: auto;
 	transform-style: preserve-3d;
+}
+
+.blueBox{
+	background-color: #2B574E;
 }
 
 .front,.back{
 	position: relative;
+	float: top;
 	width: 100%;
 	height: 100%;
 	top: 0px;
@@ -127,8 +105,9 @@ section ul li{
 }
 
 .back{
-	background-color: #FF944D;
-	background-size: cover;
+	float: bottom;
+	width: 0%;
+	height: 0%;
 	backface-visibility: hidden;
 	transform: rotateX(180deg);
 }
@@ -164,17 +143,30 @@ h1{
 	text-align: center;
 }
 
-.links{
+.links, .links:hover{
 	color: #FF944D;
-	font-size: 1.2em;
 }
 
-.links:hover{
-	color: #FF944D;
+a:visited, a:active{
+	color: #FF942E;
+}
+
+.links{
+	font-size: 1.2em;
 }
 
 section div h1 {
 	color: white;
+	text-align: center;
+}
+
+.footer{
+	position: absolute;
+	bottom: 10%;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 }
 
